    * PlatformSpecificHelperBase.progress_percent is used in InstlClientCopy.create_copy_instructions so that progress bar does not go 100% when sync stage has many items but copy stage has few.
    programmer visible changes:
    * new method PlatformSpecificHelperBase.progress_percent to increase progress by a percentage of the current total.

15/101/2017 1.6.2.11

    user visible changes:
    * fixed a bug in IndexItemsTable.versions_report where the produced list was wraped in an extra, redundant list

9/10/2017 1.6.2.10
    programmer visible changes:
    * new class TableBase to be a common base for InstlItemsTable, SVNTable
    * refactored many db queries to use TableBase.select_and_fetchall

    user visible changes:
    * fixed s3/CF incompatibilities when reading local info_map files

    admin vidible changes:
    * InstlAdmin.upload_to_s3_aws_for_revision few fixes: read instl/full_info_map.txt instead of instl/info_map.txt, changed how redundant files and folders are removed before uploading - now removing all unrequired files and then removing empty folders
    * InstlMisc.do_remove_empty_folders if REMOVE_EMPTY_FOLDERS_IGNORE_FILES is not found default to empty list
    * new method SVNTree.get_unrequired_file_paths

8/10/2017 1.6.2.9
    user visible changes:
    * fixed: .wtar items were not marked with wtarFlag in SVNTable

6/10/2017 1.6.2.8
    admin vidible changes:
    * added better progress messages around "depends" in InstlAdmin.create_links_for_revision
    * reduced InstlAdmin.do_depend time from 80 to 26 seconds by reducing complexity of InstlInstanceBase.needs & needed_by

    programmer visible changes:
    * reorder fields in SVNRow
    * reimplemented SVNTable.read_from_text, SVNTable.initialize_from_folder using sqlite.executemany
    * new function utils.iter_complete_to_longest to help with implementing SVNTable.read_from_text, SVNTable.initialize_from_folder
    * removed some redundant SVNRow methods